<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.falsepattern</groupId>
    <artifactId>jwin32</artifactId>
    <version>0.5.0</version>

    <properties>
        <java.version>17</java.version>
        <project.encoding>UTF-8</project.encoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>${project.encoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.foreign</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>-Dforeign.restricted=permit</argument>
                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                        <argument>--add-modules</argument><argument>jdk.incubator.foreign</argument>
                        <mainClass>com.falsepattern.jwin32.internal.conversion.Translator</mainClass>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <encoding>${project.encoding}</encoding>
                    <additionalJOptions>
                        <additionalJOption>-J-Xms8G</additionalJOption>
                        <additionalJOption>-J-Xmx8G</additionalJOption>
                        <additionalJOption>-J-Dforeign.restricted=permit</additionalJOption>
                        <additionalJOption>-J--enable-native-access=ALL-UNNAMED</additionalJOption>
                        <additionalJOption>-J--add-modules</additionalJOption><additionalJOption>-Jjdk.incubator.foreign</additionalJOption>
                        <additionalJOption>--add-modules</additionalJOption><additionalJOption>jdk.incubator.foreign</additionalJOption>
                    </additionalJOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadoc</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub FalsePattern Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/FalsePattern/JWin32</url>
        </repository>
    </distributionManagement>


</project>